--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* Copyright Euan Gannon 2021
-    Permission Granted to DetailCarCare.co.uk*/
-html{box-sizing:border-box}*,*:before,*:after{box-sizing:inherit}
+    Permission Granted to ---*/
+html {box-sizing:border-box;scroll-behavior:smooth;}*,*:before,*:after{box-sizing:inherit}
 /*
 
 
@@ -44,7 +44,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .euan-table,.euan-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.euan-table-all{border:1px solid #ccc}
 .euan-bordered tr,.euan-table-all tr{border-bottom:1px solid #ddd}.euan-striped tbody tr:nth-child(even){background-color:#f1f1f1}
 .euan-table-all tr:nth-child(odd){background-color:#fff}.euan-table-all tr:nth-child(even){background-color:#f1f1f1}
-.euan-hoverable tbody tr:hover,.euan-ul.euan-hoverable li:hover{background-color:#ccc}.euan-centered tr th,.euan-centered tr td{text-align:center}
+.euan-hoverable tbody tr:hover,.euan-ul.euan-hoverable li:hover{background-color:#000}.euan-centered tr th,.euan-centered tr td{text-align:center}
 .euan-table td,.euan-table th,.euan-table-all td,.euan-table-all th{padding:8px 8px;display:table-cell;text-align:left;vertical-align:top}
 .euan-table th:first-child,.euan-table td:first-child,.euan-table-all th:first-child,.euan-table-all td:first-child{padding-left:16px}
 .euan-btn,.euan-button{border:none;display:inline-block;padding:8px 16px;vertical-align:middle;overflow:hidden;text-decoration:none;color:inherit;background-color:inherit;text-align:center;cursor:pointer;white-space:nowrap;}
@@ -53,7 +53,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .euan-disabled,.euan-btn:disabled,.euan-button:disabled{cursor:not-allowed;opacity:0.3}.euan-disabled *,:disabled *{pointer-events:none}
 .euan-btn.euan-disabled:hover,.euan-btn:disabled:hover{box-shadow:none}
 .euan-badge,.euan-tag{background-color:#000;color:#fff;display:inline-block;padding-left:8px;padding-right:8px;text-align:center}.euan-badge{border-radius:50%}
-.euan-ul{list-style-type:none;padding:0;margin:0}.euan-ul li{padding:8px 16px;border-bottom:1px solid #ddd}.euan-ul li:last-child{border-bottom:none}
+.euan-ul{list-style-type:none;padding:0;margin:0}.euan-ul li{padding:8px 16px;border-bottom:1px solid #000}.euan-ul li:last-child{border-bottom:none}
 .euan-tooltip,.euan-display-container{position:relative}.euan-tooltip .euan-text{display:none}.euan-tooltip:hover .euan-text{display:inline-block}
 .euan-ripple:active{opacity:0.5}.euan-ripple{transition:opacity 0s}
 .euan-input{padding:8px;display:block;border:none;border-bottom:1px solid #ccc;width:100%}
@@ -71,7 +71,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .euan-main,#main{transition:margin-left .4s}
 .euan-modal{z-index:3;display:none;padding-top:100px;position:fixed;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:rgb(0,0,0);background-color:rgba(0,0,0,0.4)}
 .euan-modal-content{margin:auto;background-color:#fff;position:relative;padding:0;outline:0;width:600px}
-.euan-bar{width:100%;overflow:hidden}.euan-center .euan-bar{display:inline-block;width:auto}
+.euan-bar{width:100%!important;overflow:hidden}.euan-center .euan-bar{display:inline-block;width:auto}
 .euan-bar .euan-bar-item{padding:8px 16px;float:left;width:auto;border:none;display:block;outline:0}
 .euan-bar .euan-dropdown-hover,.euan-bar .euan-dropdown-click{position:static;float:left}
 .euan-bar .euan-button{white-space:normal}
@@ -109,8 +109,8 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .euan-display-topleft{position:absolute;left:0;top:0}.euan-display-topright{position:absolute;right:0;top:0}
 .euan-display-bottomleft{position:absolute;left:0;bottom:0}.euan-display-bottomright{position:absolute;right:0;bottom:0}
 .euan-display-middle{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%)}
-.euan-display-left{position:absolute;top:50%;left:0%;transform:translate(0%,-50%);-ms-transform:translate(-0%,-50%)}
-.euan-display-right{position:absolute;top:50%;right:0%;transform:translate(0%,-50%);-ms-transform:translate(0%,-50%)}
+.euan-display-left{position:absolute;top:50%;left:20%;transform:translate(0%,-50%);-ms-transform:translate(-0%,-50%)}
+.euan-display-right{position:absolute;top:50%;right:20%;transform:translate(0%,-50%);-ms-transform:translate(0%,-50%)}
 .euan-display-topmiddle{position:absolute;left:50%;top:0;transform:translate(-50%,0%);-ms-transform:translate(-50%,0%)}
 .euan-display-bottommiddle{position:absolute;left:50%;bottom:0;transform:translate(-50%,0%);-ms-transform:translate(-50%,0%)}
 .euan-display-container:hover .euan-display-hover{display:block}.euan-display-container:hover span.euan-display-hover{display:inline-block}.euan-display-hover{display:none}
@@ -141,7 +141,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .euan-tiny{font-size:10px!important}.euan-small{font-size:12px!important}.euan-medium{font-size:15px!important}.euan-large{font-size:18px!important}
 .euan-xlarge{font-size:24px!important}.euan-xxlarge{font-size:36px!important}.euan-xxxlarge{font-size:48px!important}.euan-jumbo{font-size:64px!important}
 .euan-left-align{text-align:left!important}.euan-right-align{text-align:right!important}.euan-justify{text-align:justify!important}.euan-center{text-align:center!important}
-.euan-border-0{border:0!important}.euan-border{border:1px solid #ccc!important}
+.euan-border-0{border:0!important}.euan-border{border:1px solid #000!important}
 .euan-border-top{border-top:1px solid #ccc!important}.euan-border-bottom{border-bottom:1px solid #ccc!important}
 .euan-border-left{border-left:1px solid #ccc!important}.euan-border-right{border-right:1px solid #ccc!important}
 .euan-topbar{border-top:6px solid #ccc!important}.euan-bottombar{border-bottom:6px solid #ccc!important}
@@ -156,7 +156,7 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .euan-padding-top-64{padding-top:64px!important}.euan-padding-top-48{padding-top:48px!important}
 .euan-padding-top-32{padding-top:32px!important}.euan-padding-top-24{padding-top:24px!important}
 .euan-left{float:left!important}.euan-right{float:right!important}
-.euan-button:hover{color:#000!important;background-color:#ccc!important; transition-duration: 0.3s;}.euan-button{transition-duration: 0.5s;transition-property: background-color;}
+.euan-button:hover{color:#000!important;background-color:#97afc2!important; transition-duration: 0.3s;}.euan-button{transition-duration: 0.5s;transition-property: background-color;}
 .euan-transparent,.euan-hover-none:hover{background-color:transparent!important}
 .euan-hover-none:hover{box-shadow:none!important}
 
@@ -199,50 +199,93 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 .euan-bar-item-2{padding:8px 16px;float:right;width:auto;border:none;display:block;outline:0}
 .euan-button-2:hover{color:#fff!important;background-color:#000!important; transition-duration: 0.3s;border: 1px solid #fff;border-radius: 5px}.euan-button-2{transition-duration: 0.5s;transition-property: background-color;background-color: #ccc;color: #000;border: 1px solid #ccc}
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-  position: static;
-}
-
-.topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.euan-center-btn {
-  display: block;
-  margin-left: 300px;
-  width: 25%;
-  text-align: center;
-}
-
 .icon-card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
+  box-shadow: inset 0 0 10px #000000;
   max-width: 225px;
   margin: auto;
   text-align: center;
   font-family: arial;
+  background-color: #73b9f0;
 }
 
 .icon-title {
-  color: grey;
-  font-size: 18px;
+  color: #000;
+  font-size: 20px;
 }
+
+
+.mySlides {
+  display:none;
+}
+
+
+.euan-button-norm:hover{color:#fff!important;background-color:#000!important; transition-duration: 0.3s;}.euan-button-norm{transition-duration: 0.5s;transition-property: background-color;}
+
+.dark-mode {
+  background-color: blue!important;
+  color: white!important;
+}
+
+/* POPUP CUSTOM */
+
+/* Popup container - can be anything you want */
+.popup {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* The actual popup */
+.popup .popuptext {
+  visibility: hidden;
+  width: 160px;
+  background-color: #555;
+  color: #fff;
+  text-align: center;
+  border-radius: 6px;
+  padding: 8px 0;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  margin-left: -80px;
+}
+
+/* Popup arrow */
+.popup .popuptext::after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  margin-left: -5px;
+  border-width: 5px;
+  border-style: solid;
+  border-color: #555 transparent transparent transparent;
+}
+
+/* Toggle this class - hide and show the popup */
+.popup .show {
+  visibility: visible;
+  -webkit-animation: fadeIn 1s;
+  animation: fadeIn 1s;
+}
+
+/* Add animation (fade in the popup) */
+@-webkit-keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+  from {opacity: 0;}
+  to {opacity:1 ;}
+}
+
+
 
 
 /*
@@ -253,27 +296,21 @@ hr{border:0;border-top:1px solid #eee;margin:20px 0}
 
 /* width */
 ::-webkit-scrollbar {
-  width: 20px;
+  width: 10px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 5px 5px 5px grey;
   border-radius: 0px;
-  background-color: #bfbfbf;
+  background-color: #858585;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #636363;
+  background: #454545;
   border-radius: 3px;
 }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #454545;
-  border-radius: 0px;
-}
 
 /*
 
@@ -300,12 +337,46 @@ Alert Messages
   transition-property: color;
 }
 
+.closealert-black {
+  margin-left: 15px;
+  color: black;
+  font-weight: bold;
+  float: right;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition-duration: 0.3s;
+  transition-property: color;
+}
+
 .alertbox.success {background-color: #4CAF50;}
-.alertbox.warning {background-color: #dbd52a}
+.alertbox.warning {background-color: #f5ee3b}
 .alertbox.info {background-color: #2a94db}
 
 .closealert:hover {
   color: black;
+}
+
+.closealert-black:hover {
+  color: white;
+}
+
+
+.navbar-brand {
+  display:inline-block;
+  float: left;
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 10px;
+  background-color: inherit;
+  transition-duration: 0.5s;
+  transition-property: background-color;
+}
+
+.navbar-brand:hover {
+  background-color: #97afc2;
+  transition-duration: 0.2s;
 }
 
 
